# Image-processing-program-

./: README.md
CS213-2023-20220129-20190769-20220089-A1FULL/: CMakeLists.txt  CS213-2023-s15-20220129-20190769-20220089-A1Bonus.cpp  CS213-2023-s15-20220129-20190769-20220089-A1FULL.cpp  bmplib.cpp
